[package]
name = "zaps"
version = "0.1.0"
authors = ["andrewflbarnes <andrewflbarnes@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
zaps-8583 = { path = "../zaps-8583" }